fix layout problems with touchscreen

--- a/app/static/css/cam-calib.css
+++ b/app/static/css/cam-calib.css
@@ -18,7 +18,7 @@
 }
 
 .calibration_controls input[type="submit"] {
-  font-size: 50px;
+  font-size: 46px;
  }
 
 .calibration_controls input[type="submit"]:disabled {
